src/Traisi.Questions/src/travel-diary/travel-diary-question.component.scss
@import '~angular-calendar/css/angular-calendar.css';

.travel-diary-question::-webkit-scrollbar {
	width: 6px;
}

.travel-diary-question::-webkit-scrollbar-track {
	background: #e6e6e6;
	border-radius: 2px;
	border: solid 1px #e8e8e8;
}

.travel-diary-question::-webkit-scrollbar-thumb {
	background-color: #346cb0;
	outline: 1px solid #304690;
	border-radius: 5px;
}

.travel-diary-question {
	overflow-y: auto;

	margin-bottom: 20px;

	.mapboxgl-ctrl-geocoder {
		display: none;
	}

	.cal-hour-segment {
		border: none;
	}
}
.add-event-overlay {
	position: absolute;
	bottom: 10px;
	/* top: 0px; */
	right: calc(50% - 80px);
	z-index: 10;
	width: 160px;
}

ul.dropdown-menu {
	margin: 0px;
	padding: 0px;
	padding-top: 5px;
	padding-bottom: 0px;
	border-radius: 5px;
	box-shadow: 0px 0px black;
	border: solid 1px #DDD;
	background-color: white;
	li {
		padding-left: 20px;
		padding-right: 20px;
		padding-top: 5px;
		padding-bottom: 10px;
		list-style: none;
		color: #333;
		a {
			display: block;
			color: #333;
			text-decoration: none;
		}
	}
	li:hover {
		background-color: #e6e6e6;
	}
}

